cfn.yml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  Kittens Carousel is a static website application 
  deployed with Apache Web Server on AWS Elastic Compute Cloud (EC2)
  Instance using AWS Cloudformation Service.
Parameters:
  LatestAmiId:
    Type: "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>"
    Default: "/aws/service/ami-amazon-linux-latest/al2023-ami-minimal-kernel-default-x86_64"

Resources:
  NimetullahInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: t2.micro
      KeyName: firstkey
      SecurityGroups:
        - !Ref NimetullahSecGRP
      Tags:
        - Key: Name
          Value: Web_Server_of_Project-101
      UserData:
        Fn::Base64: !Sub |
          #! /bin/bash
          dnf update -y
          dnf install httpd -y
          FOLDER="https://raw.githubusercontent.com/awsdevopsteam/101-cfn-static-website-ec2/master/static-web"
          cd /var/www/html
          wget ${FOLDER}/index.html
          wget ${FOLDER}/cat0.jpg
          wget ${FOLDER}/cat1.jpg
          wget ${FOLDER}/cat2.jpg
          wget ${FOLDER}/cat3.png
          systemctl start httpd
          systemctl enable httpd
  NimetullahSecGRP:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP connection # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Value: Nimetullah-CFN-SecGRP
          Key: Name
